--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ sidebar-avatar: /img/me.jpg      # use absolute URL, seeing it's used in both `/
 
 # SNS settings
 RSS: false
-# weibo_username:    
-zhihu_username:     
-github_username:    
-facebook_username:  
-jianshu_username:   
-#twitter_username:   
+# weibo_username:
+zhihu_username:
+github_username:
+facebook_username:
+jianshu_username:
+#twitter_username:
 
 
 
@@ -99,11 +99,9 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+      {
+        title: "知乎",
+        href: "https://www.zhihu.com/people/illionhao-hao/activities"
     },{
         title: "Apple",
         href: "https://apple.com"
